add QuerybyId function

--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,12 @@
         <button type="button" class="btn btn-default btn-sm" onclick="req(12)">Submit</button>
       </div>
     </div>
+    <div class="row underrow">
+      <div class="queryBox inline none">
+        <input class="form-control inline input-sm" style="width: 255px;" id="queryId" type="text" placeholder="UserId">
+      <button type="button" class="btn btn-default btn-sm" onclick="req(13)">Query</button>
+      </div>
+    </div>
   </div>
 </div>
   <div class="container">
@@ -163,7 +169,6 @@
 <script src="js/jquery.treemenu.js"></script>
 <script src="js/bootstrap3.3.5.js"></script>
 <script src="js/script.js"></script>
-
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
 </body>
