fix realtime update

--- a/views/index.html
+++ b/views/index.html
@@ -17,121 +17,64 @@
       </div>
     </div>
   </div>
+  <!-- left -->
   <div class="container-left">
     <div id="main-tree">
       <ul class="tree">
         <li>
           <a onclick="query(7, '', this)">Organize</a>
-          <!-- <button type="button" class="btn btn-default btn-xs" onclick="openform(this)">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-          </button>
-          
-          <div class="inline none" id="orgForm">
-            <input class="form-control inline input-sm custom-size" id="orgInput" type="text">
-            <button type="button" class="btn btn-default btn-xs" onclick="req(1, this)">add</button>
-          </div> -->
           <ul id="orgHead">
 
-
-            <!-- <li>
-              <a href="#">User</a>
-              <button type="button" class="btn btn-default btn-xs" onclick="openform(this)">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-              </button>
-              
-              <div class="inline none" id="userForm">
-                <input class="form-control inline input-sm custom-size" id="userInput" type="text">
-                <button type="button" class="btn btn-default btn-xs" onclick="req(2)">add</button>
-              </div>
-              <ul id="userHead">
-                <li>
-                  <a href="#">Category</a>
-                  <button type="button" class="btn btn-default btn-xs" onclick="openform(this)">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                  </button>
-                  
-                  <div class="inline none" id="categoryForm">
-                    <input class="form-control inline input-sm custom-size" id="categoryInput" type="text">
-                    <button type="button" class="btn btn-default btn-xs" onclick="req(3)">add</button>
-                  </div>
-                  <ul id="categoryHead" class="none">
-                    <li>
-                      <a href="#">State</a>
-                      <button type="button" class="btn btn-default btn-xs" onclick="openform(this)">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                      </button>
-                      
-                      <div class="inline none" id="stateForm">
-                        <input class="form-control inline input-sm custom-size" id="stateInput" type="text">
-                        <button type="button" class="btn btn-default btn-xs" onclick="req(4)">add</button>
-                      </div>
-                      <ul id="stateHead" class="none">
-                        <li>
-                          <a href="#">Task</a>
-                          <button type="button" class="btn btn-default btn-xs" onclick="openform(this)">
-                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                          </button>
-                          
-                          <div class="inline none" id="taskForm">
-                            <input class="form-control inline input-sm custom-size" id="taskInput" type="text">
-                            <button type="button" class="btn btn-default btn-xs" onclick="req(5)">add</button>
-                          </div>
-                          <ul id="taskHead" class="none">
-                            <li>
-                              <a href="#">Subtask</a>
-                              <button type="button" class="btn btn-default btn-xs" onclick="openform(this)">
-                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                              </button>
-                              
-                              <div class="inline none" id="subtaskForm">
-                                <input class="form-control inline input-sm custom-size" id="subtaskInput" type="text">
-                                <button type="button" class="btn btn-default btn-xs" onclick="req(6)">add</button>
-                              </div>
-                              <ul id="subtaskHead">
-
-                              </ul>
-                            </li>
-                          </ul>
-                        </li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a href="#">Task</a><button type="button" class="btn btn-default btn-xs" onclick="openform()">
-                      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    </button>
-                    
-                    <div class="inline none" id="taskForm2">
-                      <input class="form-control inline input-sm custom-size" id="taskInput2" type="text">
-                      <button type="button" class="btn btn-default btn-xs" onclick="req(7)">add</button>
-                    </div>
-                    <ul id="taskHead2" class="none">
-                      <li>
-                        <a href="#">Subtask</a>
-                        <button type="button" class="btn btn-default btn-xs" onclick="openform()">
-                          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                        </button>
-                        
-                        <div class="inline none" id="subtaskForm2">
-                          <input class="form-control inline input-sm custom-size" id="subtaskInput2" type="text">
-                          <button type="button" class="btn btn-default btn-xs" onclick="req(8)">add</button>
-                        </div>
-                        <ul id="subtaskHead2">
-
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </li> -->
-
-
-        </ul>
-      </li>
-    </ul>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <!-- query & clone display -->
+    <div class="tree">
+      <ul id="querydisplay"></ul>
+    </div>
   </div>
-  
+  <!-- right -->
+  <div class="container-right">
+    <div class="createBox">
+      <h4>Create data</h4>
+      <select id="createType" onchange="createUI(this)">
+        <option selected disabled>Choose type</option>
+        <option value="org">Organize</option>
+        <option value="user">User</option>
+        <option value="category">Category</option>
+        <option value="state">State</option>
+        <option value="task">Task</option>
+        <option value="subtask">Subtask</option>
+        <option value="task2">TaskfromCat</option>
+        <option value="subtask2">SubtaskfromCat</option>
+      </select>
+      <div class="createForm"></div>
+    </div>
+    <hr>
+    <div class="cloneBox">
+      <h4>Clone data</h4>
+      <input class="form-control inline input-sm custom-size" id="selectId" type="text"placeholder="DataId">
+      ->
+      <input class="form-control inline input-sm custom-size" id="selectUsername" type="text" placeholder="toUsername">
+      <button type="button" class="btn btn-default btn-sm" onclick="req(12)">Send</button>
+    </div>
+    <hr>
+    <div class="queryBox ">
+      <h4>Query data</h4>
+      <input class="form-control inline input-sm id-input" id="queryId" type="text" placeholder="DataId">
+      <button type="button" class="btn btn-default btn-sm" onclick="req(13)">Query</button>
+    </div>
+    <hr>
+    <div class="deleteBox">
+      <h4>Delete data</h4>
+      <input class="form-control inline input-sm id-input" id="objectId" type="text" placeholder="DataId">
+      <input class="form-control inline input-sm id-input" id="deleteUpperId" type="text" placeholder="UpperId">
+      <input class="form-control inline input-sm id-input" id="userUpperId" type="text" placeholder="UserId">
+      <button type="button" class="btn btn-default btn-sm" onclick="deleteData()">Delete</button>
+    </div>
+  </div>
+
 
   <!-- Modal -->
   <div class="modal fade" id="editData" role="dialog">
@@ -154,53 +97,12 @@
     </div>
   </div>
 
-</div>
-<div class="container-right">
-  <div class="createBox">
-    <h4>Create data</h4>
-    <select id="createType" onchange="createUI(this)">
-      <option selected disabled>Choose type</option>
-      <option value="org">Organize</option>
-      <option value="user">User</option>
-      <option value="category">Category</option>
-      <option value="state">State</option>
-      <option value="task">Task</option>
-      <option value="subtask">Subtask</option>
-      <option value="task2">TaskfromCat</option>
-      <option value="subtask2">SubtaskfromCat</option>
-    </select>
-    <div class="createForm"></div>
-  </div>
-  <hr>
-  <div class="cloneBox">
-    <h4>Clone data</h4>
-    <input class="form-control inline input-sm custom-size" id="selectId" type="text"placeholder="DataId">
-    ->
-    <input class="form-control inline input-sm custom-size" id="selectUsername" type="text" placeholder="toUsername">
-    <button type="button" class="btn btn-default btn-sm" onclick="req(12)">Send</button>
-  </div>
-  <hr>
-  <div class="queryBox ">
-    <h4>Query data</h4>
-    <input class="form-control inline input-sm id-input" id="queryId" type="text" placeholder="DataId">
-    <button type="button" class="btn btn-default btn-sm" onclick="req(13)">Query</button>
-  </div>
-  <hr>
-  <div class="deleteBox">
-    <h4>Delete data</h4>
-    <input class="form-control inline input-sm id-input" id="objectId" type="text" placeholder="DataId">
-    <input class="form-control inline input-sm id-input" id="deleteUpperId" type="text" placeholder="UpperId">
-    <input class="form-control inline input-sm id-input" id="userUpperId" type="text" placeholder="UserId">
-    <button type="button" class="btn btn-default btn-sm" onclick="deleteData()">Delete</button>
-  </div>
-</div>
-
-<script src="/socket.io/socket.io.js"></script>
-<script src="js/jquery-2.1.3.min.js"></script>
-<script src="js/jquery.treemenu.js"></script>
-<script src="js/bootstrap3.3.5.js"></script>
-<script src="js/script.js"></script>
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/jquery.treemenu.js"></script>
+  <script src="js/bootstrap3.3.5.js"></script>
+  <script src="js/script.js"></script>
+  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
 </body>
 </html>
