--- a/public/css/jquery.treemenu.css
+++ b/public/css/jquery.treemenu.css
@@ -60,8 +60,8 @@ li.tree-opened > span.toggler:before {
 }
 
 .tree li a:hover {
-    background-color: #2ecc71;
-    color: #fff;
+    /*background-color: #2ecc71;*/
+    color: #33495D;
 }
 
 .active {
@@ -77,8 +77,10 @@ li.tree-opened > span.toggler:before {
     background-color: #2ecc71;
 }
 
-/* Datamodel page */
-
+/* --------------------- Datamodel page --------------------- */
+html, body {
+    height:100%;
+}
 body{
     background: #fff;
 }
@@ -101,8 +103,6 @@ li > span{
 .modal-header{
     text-align: center;
 }
-
-
 
 li.tree-closed > a, li.tree-opened > a{
     font-weight: bold;
@@ -139,7 +139,7 @@ textarea, xmp{
 .header{
     width: 100%;
     height: 70;
-    background-color: #ff8400;
+    background-color: #FB7500;
     padding-top: 20px;
     padding-bottom: 20px;
 }
@@ -148,13 +148,23 @@ textarea, xmp{
 }
 .container-left{
     float: left;
-    width: 70%;
-    padding: 30px 20px 30px 20px;
+    height: 100%;
+    padding: 30px 30px 30px 30px;
 
 }
 .container-right{
     float: right;
-    width: 30%;
-    padding: 30px 20px 30px 20px;
-    background-color: #2ecc71;
+    height: 100%;
+    padding: 30px 30px 30px 30px;
+    background-color: #E4E7D2;
+}
+.container-right hr{
+    border-top: 1px solid #C4C4C4;
+}
+.cursor{
+    cursor: pointer;
+}
+.new-create{
+    /*background-color: #FFFED1;*/
+    margin-left: -7px;
 }
