--- a/public/css/jquery.treemenu.css
+++ b/public/css/jquery.treemenu.css
@@ -137,11 +137,14 @@ textarea, xmp{
     color: #33495D !important;
 }
 .header{
+    position: fixed;
+    top: 0;
     width: 100%;
-    height: 70;
+    height: 70px;
     background-color: #FB7500;
     padding-top: 20px;
     padding-bottom: 20px;
+    z-index: 1;
 }
 .id-input{
     width: 255px;
@@ -149,13 +152,14 @@ textarea, xmp{
 .container-left{
     float: left;
     height: 100%;
-    padding: 30px 30px 30px 30px;
+    overflow: scroll;
+    padding: 100px 30px 30px 30px;
 
 }
 .container-right{
     float: right;
     height: 100%;
-    padding: 30px 30px 30px 30px;
+    padding: 100px 30px 30px 30px;
     background-color: #E4E7D2;
 }
 .container-right hr{
