--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
       <div class="row">
         <div class="loginBox inline">
           <input class="form-control inline input-sm custom-size" id="loginName" type="text" placeholder="Username">
-          <button type="button" class="btn btn-default btn-sm" onclick="req(11)">Login</button>
+          <button type="button" class="btn btn-default btn-sm" onclick="login2transport()">Login</button>
         </div>      
       </div>
     </div>
@@ -40,7 +40,7 @@
     <div class="createBox">
       <h4>Create data</h4>
       <select id="createType" onchange="createUI(this)">
-        <option selected disabled>Choose type</option>
+        <option selected disabled>Choose data type</option>
         <option value="org">Organize</option>
         <option value="user">User</option>
         <option value="category">Category</option>
@@ -57,57 +57,76 @@
     <!-- clone container -->
     <div class="cloneBox">
       <h4>Clone data</h4>
-      <input class="form-control inline input-sm custom-size" id="selectId" type="text"placeholder="DataId">
+      <input class="form-control inline input-sm custom-size" id="selectId" type="text"placeholder="DataID">
       ->
       <input class="form-control inline input-sm custom-size" id="selectUsername" type="text" placeholder="toUsername">
-      <button type="button" class="btn btn-default btn-sm" onclick="req(12)">Send</button>
+      <button type="button" class="btn btn-default btn-sm" onclick="cloneData()">Send</button>
+      <button type="button" class="btn btn-default btn-sm" onclick="clearSeparatedisplay()">Clear</button>
     </div>
     <hr>
     <!-- query container -->
     <div class="queryBox ">
       <h4>Query data</h4>
-      <input class="form-control inline input-sm id-input" id="queryId" type="text" placeholder="DataId">
-      <button type="button" class="btn btn-default btn-sm" onclick="req(13)">Query</button>
+      <input class="form-control inline input-sm id-input" id="queryId" type="text" placeholder="DataID">
+      <button type="button" class="btn btn-default btn-sm" onclick="manualQueryData()">Query</button>
+      <button type="button" class="btn btn-default btn-sm" onclick="clearSeparatedisplay()">Clear</button>
     </div>
     <hr>
     <!-- delete container -->
     <div class="deleteBox">
       <h4>Delete data</h4>
-      <input class="form-control inline input-sm id-input" id="objectId" type="text" placeholder="DataId">
-      <input class="form-control inline input-sm id-input" id="deleteUpperId" type="text" placeholder="UpperId">
-      <input class="form-control inline input-sm id-input" id="userUpperId" type="text" placeholder="UserId">
+      <input class="form-control inline input-sm id-input" id="objectId" type="text" placeholder="DataID">
+      <input class="form-control inline input-sm id-input" id="deleteUpperId" type="text" placeholder="UpperID">
+      <input class="form-control inline input-sm id-input" id="userUpperId" type="text" placeholder="UserID">
       <button type="button" class="btn btn-default btn-sm" onclick="deleteData()">Delete</button>
     </div>
+    <hr>
+    <!-- add Edge container -->
+    <div class="addedgeBox">
+      <h4>Add edge</h4>
+      <select id="edgeType" onchange="addEdgeUI(this)">
+        <option selected disabled>Choose edge type</option>
+        <option value="1">User -> Organize</option>
+        <option value="2">Category -> User</option>
+        <option value="3">State -> Category</option>
+        <option value="4">Task -> State</option>
+        <option value="5">Subtask -> Task</option>
+        <option disabled>--------------------</option>
+        <option value="6">Task -> Category</option>
+      </select>
+      <div class="edgeForm"></div>
+    </div>
   </div>
+</div>
 
 
-  <!-- edit data Modal -->
-  <div class="modal fade" id="editData" role="dialog">
-    <div class="modal-dialog">
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Edit Data</h4>
-        </div>
-        <div class="modal-body">
-          <label for="">dataID : <span id="edit-dataId"></span></label>
-          <textarea id="edit-dataContent" cols="75" rows="10"></textarea>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" onclick="req(9)">Save</button>
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
+<!-- edit data Modal -->
+<div class="modal fade" id="editData" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Edit Data</h4>
+      </div>
+      <div class="modal-body">
+        <label for="">dataID : <span id="edit-dataId"></span></label>
+        <textarea id="edit-dataContent" cols="75" rows="10"></textarea>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" onclick="editDatacontent()">Save</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
+</div>
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="js/jquery-2.1.3.min.js"></script>
-  <script src="js/jquery.treemenu.js"></script>
-  <script src="js/bootstrap3.3.5.js"></script>
-  <script src="js/script.js"></script>
-  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="js/jquery-2.1.3.min.js"></script>
+<script src="js/jquery.treemenu.js"></script>
+<script src="js/bootstrap3.3.5.js"></script>
+<script src="js/script.js"></script>
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
 </body>
 </html>
